Segundo commit - Symfony RestFul Api

--- a/app/Resources/views/Api/index.html.twig
+++ b/app/Resources/views/Api/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="blog-title">Backscratchers</h1>
+                    <h1 class="blog-title">Scatchbling (SB)</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
