--- a/app/Resources/views/baseSecure.html.twig
+++ b/app/Resources/views/baseSecure.html.twig
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Secure zone</a>
+                <a class="navbar-brand" href="">Admin</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -58,10 +58,7 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="{{ path('homepage') }}"><i class="fa fa-home fa-fw"></i> Ir al Inicio</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="{{ path('homepage') }}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="{{ path('logout') }}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -77,17 +74,14 @@
                             <a href="{{path('homepage')}}"><i class="fa fa-home fa-fw"></i> Home</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-product-hunt fa-fw"></i> Products<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-comments fa-fw"></i> Products<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="{{ path('homepage') }}"><i class="fa fa-arrow-right"></i> New</a>
+                                    <a href="{{ path('new_product') }}">New</a>
                                 </li>
                                 <li>
-                                    <a href="{{ path('homepage') }}"><i class="fa fa-arrow-right"></i> Edit</a>
-                                </li>
-                                <li>
-                                    <a href="{{ path('homepage') }}"><i class="fa fa-arrow-right"></i> List</a>
-                                </li>                                   
+                                    <a href="{{ path('list_products') }}">List</a>
+                                </li>                                
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>  
@@ -95,7 +89,7 @@
                             <a href="#"><i class="fa fa-user fa-fw"></i> Users<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="{{ path('homepage') }}"><i class="fa fa-arrow-right"></i> Edit users</a>
+                                    <a href="{{ path('list_products') }}">Edit</a>
                                 </li>                                
                             </ul>
                             <!-- /.nav-second-level -->
