Prueba finalizada - Symfony Rest Api

--- a/app/Resources/views/Api/registro.html.twig
+++ b/app/Resources/views/Api/registro.html.twig
@@ -27,7 +27,7 @@
             <div class="panel panel-info">
                 <div class="panel-heading"><b>Registro</b></div>
                 <div class="panel-body">
-                    <form action="" method="post" {{ form_enctype(form) }}>
+                    <form action="" method="post">
                         {{ form_widget(form) }}
                         <br>
                         <button type="submit" class="btn btn-success">Guardar</button>
