--- a/app/Resources/views/baseSecure.html.twig
+++ b/app/Resources/views/baseSecure.html.twig
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Blog Admin</title>
+    <title>Test Admin</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{{ asset('assets/template/sbadmin/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -81,15 +81,6 @@
                                 </li>
                                 <li>
                                     <a href="{{ path('list_products') }}">List</a>
-                                </li>                                
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>  
-                        <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> Users<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="{{ path('list_products') }}">Edit</a>
                                 </li>                                
                             </ul>
                             <!-- /.nav-second-level -->
