--- a/app/Resources/views/Api/login.html.twig
+++ b/app/Resources/views/Api/login.html.twig
@@ -36,7 +36,7 @@
                         <div class="form-group">
                             <div class="col-md-8 col-md-offset-4">
                                 <button type="submit" class="btn btn-success">
-                                    Ingresar
+                                    Login
                                 </button>
                             </div>
                         </div>                       
