--- a/app/Resources/views/Api/new.html.twig
+++ b/app/Resources/views/Api/new.html.twig
@@ -4,7 +4,7 @@
 <div class="">
     <br>
     <div class="row">
-        <div class="col-md-4 col-md-offset-4 text-center">
+        <div class="col-md-10 text-center">
             {% for mensaje in app.session.flashbag().get('info') %}
                 <div class="alert alert-success alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -12,7 +12,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="col-md-4 col-md-offset-4 text-center">
+        <div class="col-md-10 text-center">
             {% for mensaje in app.session.flashbag().get('error') %}
                 <div class="alert alert-danger alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -35,7 +35,7 @@
                     <form action="" method="post">
                         {{ form_widget(form) }}
                         <br>
-                        <button type="submit" class="btn btn-success">Update</button>
+                        <button type="submit" class="btn btn-success">Submit</button>
                         {{ form_errors(form) }}
                     </form>
                 </div>
